[gd_scene load_steps=10 format=3 uid="uid://bfgan6dgo0pvo"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://cb7mpgj11eu2u" path="res://Assets/Sprites/MTF_PLAYER.png" id="2_cvnsp"]
[ext_resource type="Script" uid="uid://byhcp6vxke4m2" path="res://Scripts/weapon.gd" id="3_6t5aa"]
[ext_resource type="Resource" uid="uid://b3bmnil2ntdpa" path="res://Resources/Weapons/glock18.tres" id="4_vgqql"]
[ext_resource type="Texture2D" uid="uid://cw2rqlq3natb" path="res://Assets/Sprites/glock18.png" id="5_fkybt"]
[ext_resource type="Script" path="res://Scripts/weapon_hud.gd" id="6_x3wgy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cvnsp"]
radius = 21.0

[sub_resource type="SpriteFrames" id="SpriteFrames_cdus1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cvnsp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_a2r70"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_fkybt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
position = Vector2(2, 0)
script = ExtResource("1_cvnsp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
top_level = true
shape = SubResource("CircleShape2D_cvnsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_cdus1")
offset = Vector2(3, 0)

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource("3_6t5aa")
stats = ExtResource("4_vgqql")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Weapon"]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_a2r70")
offset = Vector2(20, 0)

[node name="Muzzle" type="Marker2D" parent="Weapon"]
position = Vector2(63, 21)

[node name="FireRate" type="Timer" parent="Weapon"]
wait_time = 0.01
one_shot = true

[node name="Reload" type="Timer" parent="Weapon"]
one_shot = true

[node name="ReloadSound" type="AudioStreamPlayer2D" parent="Weapon"]

[node name="FireSound" type="AudioStreamPlayer2D" parent="Weapon"]

[node name="WeaponHUD" type="Node2D" parent="."]
top_level = true
position = Vector2(2, 0)
script = ExtResource("6_x3wgy")

[node name="Ammo" type="Label" parent="WeaponHUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.5
offset_top = -63.0
offset_right = 57.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "AMMO: "
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="This is so spaghetti coded" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../WeaponHUD")
update_rotation = false

[connection signal="reload_finished" from="Weapon" to="WeaponHUD" method="_on_weapon_reload_finished"]
[connection signal="weapon_fired" from="Weapon" to="WeaponHUD" method="_on_weapon_weapon_fired"]
[connection signal="weapon_reload" from="Weapon" to="WeaponHUD" method="_on_weapon_weapon_reload"]
[connection signal="timeout" from="Weapon/FireRate" to="Weapon" method="_on_fire_rate_timeout"]
[connection signal="timeout" from="Weapon/Reload" to="Weapon" method="_on_reload_timeout"]
